css/styletest.css
/*******************************  fonts imported from Google fonts *********************************************/

@import url('https://fonts.googleapis.com/css?family=Bangers|Montserrat:400,500|Cuprum:400,700');


/************************************************************  GENERAL *******************************************************************/

html,
body {
    height: 100%;
    padding: 0px;
    margin: 0px;
    font-family: 'Cuprum', sans-serif;
    /* set the default text to Cuprum*/
    font-weight: 400;
    font-size: 16px;
}

.uppercase {
    text-transform: uppercase;
}

p,
h1,
h2,
h3,
h4,
ul,
li,
progress,
.col-xs-12,
.hight20 .row,
.wrapper-header .row {
    margin: 0px;
    padding: 0px;
}

.btn {
    font-family: "Bangers", sans-serif;
    /*common font for all the buttons*/
    letter-spacing: 1px;
}

header {
    width: 100%;
}

/*****  background color from main section in all pages *****/

.bg-section {
    background-color: #eeeeee;
}

.wrapper-section {
    margin: 60px 40px;
}

.page-subtitle {
    font-family: "Bangers", sans-serif;
    margin-bottom: 35px;
    margin-left: 16px;
    font-size: 32px;
    color: #555555;
    text-align: center;
}


/*******************************  header index.html *********************************************/

/* header for small screens */

.hight20-0 {
    padding: 10px;
    border: 0px;
    height: 20%;
    background-color: #de8e15;
    position: relative;
    border-bottom: 2px solid #0b1752;
}

.hight20-0 img {
    position: absolute;
    /* placed absolute in relation to hight-20-0 because is hight-20-0 is position:relative and img is absolute*/
    height: 100%;
    display: block;
    margin: auto;
    top: 50px;
    left: 0;
    right: 0;
    z-index: 1;
    /* so it apperas on top of the carousel and header*/
}

/************************************************************ Index.html *****************************************************************/

/******************************* Carousel *********************************************/

.hight60-80 {
    padding: 0px;
    border: 0px;
    height: 60%;
    overflow: hidden;
}


.carousel,
.item,
.active {
    height: 100%;
}


.carousel-inner {
    height: 100%;
}

.slide {
    margin: 0px;
}

.carousel-inner>.item>img {
    position: absolute;
    top: 0;
    left: 0;
    min-width: 100%;
    height: 100%;
    object-fit: cover;
    /*so the image doesn't lose the ratio*/
}

.carousel-indicators {
    margin-bottom: 20px;
}


.carousel-indicators .active {
    background-color: #de8e15;
    width: 15px;
    height: 15px;
}


.carousel-indicators li {
    border: 3px solid #0b1752;
    width: 15px;
    height: 15px;
}

.carousel-indicators li:active {
    background-color: #de8e15;
}

.glyphicon.glyphicon-chevron-right {
    font-size: 50px;
    color: #de8e15;
}

.glyphicon.glyphicon-chevron-left {
    font-size: 50px;
    color: #de8e15;
}



/******************************* Footer index.html ************************************/

.hight20 {
    margin: 0px;
    padding: 0px;
    border: 0px;
    height: 20%;
    background-color: #0b1752;
    border-top: 2px solid #de8e15;
}


.circle {
    width: 220px;
    height: 220px;
    border-radius: 110px;
    background-color: #de8e15;
    position: absolute;
    bottom: 10%;
    left: 10%;
}

.hight20 img {
    position: absolute;
    width: 220px;
    height: auto;
    bottom: 15px;
    left: 15px;
    z-index: 3;
}


.hight20 {
    display: flex;
    flex-direction: column;
    justify-content: center;

}

.hight20 p {
    text-align: center;
}

.hight20 p a {
    text-align: center;
    font-family: 'Bangers', sans-serif;
    font-size: 30px;
    color: #ffffff;
    letter-spacing: 4px;
    transition: all .3s ease-in-out;
    -webkit-transition: all .3s ease-in-out;
    -moz-transition: all .3s ease-in-out;
    -o-transition: all .3s ease-in-out;
}

.hight20 p a:hover,
.hight20 p a:focus {
    color: #de8e15;
    text-decoration: none;
}

/******************************* media queries for index.html *************************/

@media (min-width:768px) {

    .hight20 p a {
        font-size: 50px;
    }

    /***** for desktop we want to display the carousel using the 80% 
     of the hight instead of the 60% as we do for small screens*/
    .hight60-80 {
        height: 80%;
    }

}


/************************************* band.html, contact.html, listen.html, news.html *****************************************************/

/******************************* general header for band.html, contact.html, listen.html, news.html ****************************************/

.wrapper-header {
    background-color: #de8e15;
    border-bottom: 2px solid #0b1752;
    height: 90px;
}

/************************************** header, nav bar and footer for theband.html, listen.html, news.html, contact.html******************/

/************************************ header logo ************************/

.logo {
    height: 90px;
    position: relative;
}

.logo img {
    position: absolute;
    width: 200px;
    height: 200px;
    object-fit: contain;
    bottom: -80px;
    z-index: 1;
    padding-left: 45px;
}


/***** changing LOGO size and position for each screen size  *****/

@media (min-width: 768px) and (max-width: 991px) {
    .logo img {
        width: 150px;
        height: 150px;
        bottom: -70px;
        padding-left: 15px;
    }
}

@media (min-width: 992px) {
    .logo img {
        width: 210px;
        height: 210px;
        bottom: -100px;
        padding-left: 40px;
    }
}

/*************************************************** NAVIGATION BAR, FOOTER AND MODAL FOR ALL ****************/

/******************* navigation bar  ************************************/

.bg-nav {
    min-height: 90px;
    padding-right: 0px;
    padding-left: 0px;
}

.navbar-default {
    background-color: transparent;
    border: none;
}
/* ... */

